Fix scroll on iPhone

--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ nav {
   background: #fff;
   text-align: center;
   position: fixed;
+  z-index: 1;
   width: 100%;
   height: 3.5em;
   padding-bottom: env(safe-area-inset-bottom, 0);
@@ -158,7 +159,6 @@ nav a {
   #container {
     margin-top: 5em;
     margin-bottom: calc(3.5em + env(safe-area-inset-bottom, 0));
-    height: calc(100vh - 5em - 3.5em - env(safe-area-inset-bottom, 0));
     overflow: scroll;
   }
 
